# ARCSATisfied

./: README.md  pyproject.toml
src/arcsatisfied/: __init__.py  astap.py  catalog.py  cli.py  horizons.py  pipeline.py  reduction.py
tests/: test_arcsatisfied.py
